[MAPR-30661] httpfs uses vulnerable tomcat